--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 * {
   box-sizing: border-box;
-  color: #000;
 }
 body {
   font-family: "Roboto", sans-serif;
+  color: #000;
 }
 .container {
   max-width: 1194px;
@@ -80,9 +80,145 @@ body {
   height: 18px;
   background: #ffaf19;
   border-radius: 50%;
-    color: #000;
-    font-size: 8px;
-line-height: 9px;
-    display: block;
-    padding: 5px;
+  color: #000;
+  font-size: 8px;
+  line-height: 9px;
+  display: block;
+  padding: 5px;
+}
+.slide {
+  position: relative;
+  display: flex;
+  align-items: center;
+  border-radius: 20px;
+  overflow: hidden;
+  min-height: 400px;
+  padding: 100px;
+}
+.slide-text-light {
+  
+  color: #fff;
+}
+.slide-content {
+  position: relative;
+  max-width: 400px;
+}
+.slide-title {
+  margin-top: 0;
+  margin-bottom: 15px;
+  font-size: 50px;
+  line-height: 51px;
+  font-weight: bold;
+}
+.slide-text {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 23px;
+  margin-bottom: 30px;
+}
+.button-primary {
+  background: #f47322;
+  color: #fff;
+}
+.button-default {
+  background-color: #fff;
+  color: #5F5F61;
+}
+.button {
+  display: inline-block;
+  border-radius: 25px;
+  padding: 12px 50px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 23px;
+  text-decoration: none;
+  cursor: pointer;
+}
+.slide-summer {
+  background-image: url("../img/summer.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.slide::before  {
+  position: absolute;
+  content: "";
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0.43) 40.45%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+.promo {
+  
+  margin-top: 50px;
+  display: flex;
+
+
+}
+.card {
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
+  padding: 32px;
+  max-width: 570px;
+  width: 100%;
+  min-height: 380px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.card:before{
+  z-index: -1;
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+}
+.card-title {
+  font-weight: 500;
+font-size: 24px;
+line-height: 23px;
+margin-top: 4px;
+margin-bottom: 21px;
+}
+.card-description {
+  max-width: 200px;
+  font-weight: 500;
+font-size: 16px;
+line-height: 23px;
+}
+.card-price{
+  display: block;
+  font-weight: 500;
+font-size: 24px;
+line-height: 23px;
+margin-bottom: 8px;
+}
+.card-delovery {
+  display: block;
+   font-weight: 500;
+font-size: 16px;
+line-height: 23px;
+margin-bottom: 25px;
+}
+.card-image {
+position: absolute;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+z-index: -2;
+object-fit: cover;
+}
+.minimum-effort {
+  margin-left: 54px;
 }
