--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,6 @@ body {
   padding: 100px;
 }
 .slide-text-light {
-  
   color: #fff;
 }
 .slide-content {
@@ -122,7 +121,7 @@ body {
 }
 .button-default {
   background-color: #fff;
-  color: #5F5F61;
+  color: #5f5f61;
 }
 .button {
   display: inline-block;
@@ -139,7 +138,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.slide::before  {
+.slide::before {
   position: absolute;
   content: "";
   left: 0;
@@ -155,11 +154,9 @@ body {
   );
 }
 .promo {
-  
   margin-top: 50px;
   display: flex;
-
-
+  justify-content: space-between;
 }
 .card {
   position: relative;
@@ -173,9 +170,9 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
-.card:before{
+.card:before {
   z-index: -1;
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   top: 0;
@@ -185,40 +182,37 @@ body {
 }
 .card-title {
   font-weight: 500;
-font-size: 24px;
-line-height: 23px;
-margin-top: 4px;
-margin-bottom: 21px;
+  font-size: 24px;
+  line-height: 23px;
+  margin-top: 4px;
+  margin-bottom: 21px;
 }
 .card-description {
   max-width: 200px;
   font-weight: 500;
-font-size: 16px;
-line-height: 23px;
+  font-size: 16px;
+  line-height: 23px;
 }
-.card-price{
+.card-price {
   display: block;
   font-weight: 500;
-font-size: 24px;
-line-height: 23px;
-margin-bottom: 8px;
+  font-size: 24px;
+  line-height: 23px;
+  margin-bottom: 8px;
 }
 .card-delovery {
   display: block;
-   font-weight: 500;
-font-size: 16px;
-line-height: 23px;
-margin-bottom: 25px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  margin-bottom: 25px;
 }
 .card-image {
-position: absolute;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-z-index: -2;
-object-fit: cover;
-}
-.minimum-effort {
-  margin-left: 54px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  object-fit: cover;
 }
