--- a/css/style.css
+++ b/css/style.css
@@ -154,21 +154,25 @@ body {
   );
 }
 .promo {
-  margin-top: 50px;
+  padding: 50px 0;
   display: flex;
   justify-content: space-between;
+  margin: -20px;
 }
 .card {
+  flex: 50%;
+  margin: 20px;
   position: relative;
   border-radius: 20px;
   overflow: hidden;
   padding: 32px;
   max-width: 570px;
-  width: 100%;
-  min-height: 380px;
+    min-height: 380px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  
+ 
 }
 .card:before {
   z-index: -1;
