--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ body {
   line-height: 23px;
   margin-bottom: 8px;
 }
-.card-delovery {
+.card-delivery {
   display: block;
   font-weight: 500;
   font-size: 16px;
@@ -219,4 +219,246 @@ body {
   height: 100%;
   z-index: -2;
   object-fit: cover;
+}
+.delivery-week {
+  padding: 100px 0;
+}
+.section-title{
+  font-weight: 500;
+font-size: 32px;
+line-height: 23px;
+margin-top: 0;
+margin-bottom: 47px;
+}
+.delivery-cards {
+  display: flex;
+  flex-wrap: wrap;
+ margin: -15px;
+}
+.delivery-card {
+  margin: 15px;
+  position: relative;
+width: 275px;
+height: 182px;
+border-radius: 18px;
+overflow: hidden;
+}
+.delivery-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.delivery-tag {
+position: absolute;
+left: 10px;
+top: 16px;
+border-radius: 30px;
+font-weight: 500;
+font-size: 20px;
+line-height: 23px;
+color: #49494F;
+padding: 5px 10px;
+}
+.tag-health {
+  background: #D0FD89;
+}
+.tag-vegetable {
+  background: #AEBC41;
+}
+.tag-text-light {
+  color: #fff;
+}
+.tag-meat {
+  background: #B86B78;
+}
+.tag-bird {
+  background: #D68334;
+}
+.tag-fish {
+  background: #CD6255;
+}
+.tag-child{
+  background: #FFFDBF;
+}
+.tag-parrent {
+  background: #F6FDC8;
+}
+.tag-festive {
+  background: #FEF7FE;
+}
+.section-grey {
+  background: #F6F6F6;
+}
+.category {
+  padding-top: 40px;
+  padding-bottom: 60px;
+}
+.tabs {
+  display: flex;
+  margin: 0;
+  margin-bottom: 62px;
+  padding: 0;
+  list-style: none;
+}
+.tabs-link {
+  text-decoration: none;
+  font-size: 20px;
+line-height: 23px;
+color: #49494F;
+margin-right: 58px;
+}
+.tabs-link.active {
+  color: #F37321;
+}
+.tabs-content {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+    margin: -15px;
+}
+.card-tabs {
+  margin: 15px;
+  max-width: 270px;
+  border-radius: 20px;
+  overflow: hidden;
+  background: #FFFFFF;
+box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+
+}
+.tabs-img {
+  max-width: 100%;
+
+}
+.tabs-card-content {
+  padding: 23px;
+}
+.tabs-title {
+  margin-top: 0;
+  margin-bottom: 13px;
+  font-weight: 500;
+font-size: 20px;
+line-height: 23px;
+}
+.tabs-description {
+  font-weight: 500;
+font-size: 14px;
+line-height: 23px;
+color: #B9B9BE;
+margin: 0;
+}
+.tabs-info{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 37px;
+}
+
+.tabs-price {
+  display: block;
+  font-weight: 500;
+font-size: 23px;
+line-height: 23px;
+color: #4B4B51;
+margin-bottom: 5px;
+}
+.weight{
+  font-weight: 500;
+font-size: 17px;
+line-height: 20px;
+color: #AAAAB1;
+}
+.button-outline {
+border: 2px solid #F37321;
+border-radius: 33px;
+padding: 15px 25px;
+background-color: transparent;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+color: #F37321;
+}
+.button-center {
+  display: block;
+  margin: auto;
+  margin-top: 60px;
+  width: 315px;
+}
+.advantages {
+  padding: 100px 0;
+}
+.advantages-title {
+  font-weight: 500;
+font-size: 32px;
+line-height: 23px;
+}
+.advantages-cards {
+  display: flex;
+   justify-content: space-between;
+  flex-wrap: wrap;
+    margin: -15px;
+    padding-top: 52px;
+    padding-bottom: 100px;
+  
+}
+.advantages-card {
+  margin: 15px;
+  max-width: 270px;
+  max-height: 296px;
+  background: #FFFFFF;
+border: 1px solid #E9E9E9;
+box-sizing: border-box;
+box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+border-radius: 18px;
+padding: 30px 24px 24px 25px;
+display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.advantages-card-title {
+  font-weight: 500;
+font-size: 16px;
+line-height: 23px;
+}
+.advantages-card-description {
+  font-size: 14px;
+line-height: 22px;
+color: #49494F;
+}
+.footer {
+  background: #F6F6F6;
+  padding: 40px 0;
+}
+.footer-logo {
+  width: 205px;
+  margin-right: 50px;
+}
+.footer-wrapper {
+  display: flex;
+  align-items: center;
+}
+.footer-link {
+  font-size: 16px;
+line-height: 23px;
+text-decoration-line: underline;
+color: #000;
+cursor: pointer;
+margin-right: 50px;
+}
+.social-links {
+  display: flex;
+  justify-content: space-between;
+  margin-left: auto;
+}
+.social-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  border-radius: 50%;
+  width: 28px;
+height: 28px;
+padding: 5px 7px;
+  background: #C4C4C4;
+  margin-left: 20px;
 }
