--- a/css/style.css
+++ b/css/style.css
@@ -95,12 +95,28 @@ body {
   min-height: 400px;
   padding: 100px;
 }
+.swiper {
+  position: relative;
+}
+.slider-buttons {
+  width: 100px;
+  position: absolute;
+  bottom: 40px;
+  right: 46px;
+  z-index: 9;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.slider-button {
+  cursor: pointer;
+}
 .slide-text-light {
   color: #fff;
 }
 .slide-content {
   position: relative;
-  max-width: 400px;
+  max-width: 450px;
 }
 .slide-title {
   margin-top: 0;
@@ -133,10 +149,21 @@ body {
   text-decoration: none;
   cursor: pointer;
 }
+
 .slide-summer {
   background-image: url("../img/summer.png");
+}
+.slide-vitamin {
+  background-image: url("../img/vitamin.png");
+}
+
+.sl-bg {
   background-repeat: no-repeat;
   background-size: cover;
+}
+.slide-autumn {
+  background-image: url("../img/autumn.png");
+  background-position: bottom right;
 }
 .slide::before {
   position: absolute;
@@ -167,12 +194,10 @@ body {
   overflow: hidden;
   padding: 32px;
   max-width: 570px;
-    min-height: 380px;
+  min-height: 380px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  
- 
 }
 .card:before {
   z-index: -1;
@@ -223,25 +248,25 @@ body {
 .delivery-week {
   padding: 100px 0;
 }
-.section-title{
+.section-title {
   font-weight: 500;
-font-size: 32px;
-line-height: 23px;
-margin-top: 0;
-margin-bottom: 47px;
+  font-size: 32px;
+  line-height: 23px;
+  margin-top: 0;
+  margin-bottom: 47px;
 }
 .delivery-cards {
   display: flex;
   flex-wrap: wrap;
- margin: -15px;
+  margin: -15px;
 }
 .delivery-card {
   margin: 15px;
   position: relative;
-width: 275px;
-height: 182px;
-border-radius: 18px;
-overflow: hidden;
+  width: 275px;
+  height: 182px;
+  border-radius: 18px;
+  overflow: hidden;
 }
 .delivery-img {
   width: 100%;
@@ -249,45 +274,45 @@ overflow: hidden;
   object-fit: cover;
 }
 .delivery-tag {
-position: absolute;
-left: 10px;
-top: 16px;
-border-radius: 30px;
-font-weight: 500;
-font-size: 20px;
-line-height: 23px;
-color: #49494F;
-padding: 5px 10px;
+  position: absolute;
+  left: 10px;
+  top: 16px;
+  border-radius: 30px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  color: #49494f;
+  padding: 5px 10px;
 }
 .tag-health {
-  background: #D0FD89;
+  background: #d0fd89;
 }
 .tag-vegetable {
-  background: #AEBC41;
+  background: #aebc41;
 }
 .tag-text-light {
   color: #fff;
 }
 .tag-meat {
-  background: #B86B78;
+  background: #b86b78;
 }
 .tag-bird {
-  background: #D68334;
+  background: #d68334;
 }
 .tag-fish {
-  background: #CD6255;
+  background: #cd6255;
 }
-.tag-child{
-  background: #FFFDBF;
+.tag-child {
+  background: #fffdbf;
 }
 .tag-parrent {
-  background: #F6FDC8;
+  background: #f6fdc8;
 }
 .tag-festive {
-  background: #FEF7FE;
+  background: #fef7fe;
 }
 .section-grey {
-  background: #F6F6F6;
+  background: #f6f6f6;
 }
 .category {
   padding-top: 40px;
@@ -303,31 +328,29 @@ padding: 5px 10px;
 .tabs-link {
   text-decoration: none;
   font-size: 20px;
-line-height: 23px;
-color: #49494F;
-margin-right: 58px;
+  line-height: 23px;
+  color: #49494f;
+  margin-right: 58px;
 }
 .tabs-link.active {
-  color: #F37321;
+  color: #f37321;
 }
 .tabs-content {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-    margin: -15px;
+  margin: -15px;
 }
 .card-tabs {
   margin: 15px;
   max-width: 270px;
   border-radius: 20px;
   overflow: hidden;
-  background: #FFFFFF;
-box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
-
+  background: #ffffff;
+  box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
 }
 .tabs-img {
   max-width: 100%;
-
 }
 .tabs-card-content {
   padding: 23px;
@@ -336,17 +359,17 @@ box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
   margin-top: 0;
   margin-bottom: 13px;
   font-weight: 500;
-font-size: 20px;
-line-height: 23px;
+  font-size: 20px;
+  line-height: 23px;
 }
 .tabs-description {
   font-weight: 500;
-font-size: 14px;
-line-height: 23px;
-color: #B9B9BE;
-margin: 0;
+  font-size: 14px;
+  line-height: 23px;
+  color: #b9b9be;
+  margin: 0;
 }
-.tabs-info{
+.tabs-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -356,26 +379,26 @@ margin: 0;
 .tabs-price {
   display: block;
   font-weight: 500;
-font-size: 23px;
-line-height: 23px;
-color: #4B4B51;
-margin-bottom: 5px;
+  font-size: 23px;
+  line-height: 23px;
+  color: #4b4b51;
+  margin-bottom: 5px;
 }
-.weight{
+.weight {
   font-weight: 500;
-font-size: 17px;
-line-height: 20px;
-color: #AAAAB1;
+  font-size: 17px;
+  line-height: 20px;
+  color: #aaaab1;
 }
 .button-outline {
-border: 2px solid #F37321;
-border-radius: 33px;
-padding: 15px 25px;
-background-color: transparent;
-font-weight: 500;
-font-size: 16px;
-line-height: 19px;
-color: #F37321;
+  border: 2px solid #f37321;
+  border-radius: 33px;
+  padding: 15px 25px;
+  background-color: transparent;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #f37321;
 }
 .button-center {
   display: block;
@@ -388,46 +411,45 @@ color: #F37321;
 }
 .advantages-title {
   font-weight: 500;
-font-size: 32px;
-line-height: 23px;
+  font-size: 32px;
+  line-height: 23px;
 }
 .advantages-cards {
   display: flex;
-   justify-content: space-between;
+  justify-content: space-between;
   flex-wrap: wrap;
-    margin: -15px;
-    padding-top: 52px;
-    padding-bottom: 100px;
-  
+  margin: -15px;
+  padding-top: 52px;
+  padding-bottom: 100px;
 }
 .advantages-card {
   margin: 15px;
   max-width: 270px;
   max-height: 296px;
-  background: #FFFFFF;
-border: 1px solid #E9E9E9;
-box-sizing: border-box;
-box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
-border-radius: 18px;
-padding: 30px 24px 24px 25px;
-display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+  background: #ffffff;
+  border: 1px solid #e9e9e9;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+  border-radius: 18px;
+  padding: 30px 24px 24px 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 .advantages-card-title {
   font-weight: 500;
-font-size: 16px;
-line-height: 23px;
+  font-size: 16px;
+  line-height: 23px;
 }
 .advantages-card-description {
   font-size: 14px;
-line-height: 22px;
-color: #49494F;
+  line-height: 22px;
+  color: #49494f;
 }
 .footer {
-  background: #F6F6F6;
+  background: #f6f6f6;
   padding: 40px 0;
 }
 .footer-logo {
@@ -440,11 +462,11 @@ color: #49494F;
 }
 .footer-link {
   font-size: 16px;
-line-height: 23px;
-text-decoration-line: underline;
-color: #000;
-cursor: pointer;
-margin-right: 50px;
+  line-height: 23px;
+  text-decoration-line: underline;
+  color: #000;
+  cursor: pointer;
+  margin-right: 50px;
 }
 .social-links {
   display: flex;
@@ -457,8 +479,119 @@ margin-right: 50px;
   text-decoration: none;
   border-radius: 50%;
   width: 28px;
-height: 28px;
-padding: 5px 7px;
-  background: #C4C4C4;
+  height: 28px;
+  padding: 5px 7px;
+  background: #c4c4c4;
   margin-left: 20px;
 }
+@media (max-width: 1260px) {
+  .container {
+    max-width: 920px;
+  }
+  .search-form {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  .card-tabs {
+    flex: 50%;
+    width: calc(50% - 30px);
+  }
+}
+@media (max-width: 992px) {
+  .container {
+    max-width: 600px;
+  }
+  .slide{
+    padding: 70px;
+  }
+ .delivery-card {
+   width: calc(50% - 30px);
+ }
+ .card-delivery{
+  max-width: 80%;
+ }
+ .footer-logo {
+   margin-right: 40px;
+ }
+  }
+  @media (max-width: 800px) {
+    .container {
+      max-width: 500px;
+    }
+    .header {
+      flex-wrap: wrap;
+    }
+    .search-form {
+      order: 5;
+      margin: 15px 0;
+    }
+    .promo{
+      flex-wrap: wrap;
+    }
+    .card-tabs {
+    flex: 35%;
+    }
+    .button {
+      padding: 12px 25px;
+    }
+    .button-outline {
+      padding: 10px 15px;
+    }
+    .advantages-card {
+      flex: 44%;
+  }
+  }
+  @media (max-width: 550px) {
+    .container {
+      max-width: 90%;
+    }
+    .button {
+      padding: 10px 15px;
+  }
+  .slide{
+    padding: 15px;
+  }
+  .slide-title {
+    font-size: 40px;
+  }
+    .slider-buttons {
+      bottom: 5px;
+      right: 1px;
+  }
+  .slide-content { 
+    max-width: 300px;
+  }
+    .tabs {
+      flex-wrap: wrap;
+      margin-bottom: 32px;
+    }
+    .tabs-item {
+      padding-bottom: 15px;
+  }
+    .card-tabs, .delivery-card,.advantages-card  {
+      max-width: 100%;
+      flex: 50%;
+      }
+     .button-center {
+      width: 255px;
+     }
+      .footer-wrapper {
+        flex-wrap: wrap;
+        flex-direction: column;
+      }
+      .footer-nav {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        margin-top: 15px;
+    }
+    .social-links {
+      margin-top: 15px;
+      margin-left: -35px;
+    }
+    a.social-link {
+      margin-left: 0;
+      margin-right: 20px;
+  }
+  }
